# Video-Streaming-Project

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
