[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "utils"
]

[profile.release]
lto = true
opt-level = 0
panic = "unwind"


[profile.dev.package."*"]
opt-level = 0

[profile.dev]
opt-level = 0


[profile.test]
opt-level = 0

[profile.test.package."*"]
opt-level = 0

[build]
rustflags = ["-Z", "threads=8"]