[package]
name = "client"
version = "0.0.0"
edition = "2021"

[dependencies]
quinn = "0.9" # Must use Version 0.9
rcgen = "0.13.1"
rustls = { version = "0.20", features = ["dangerous_configuration"] } # Must use version 0.20
serde_json = "1.0"
rand = "0.8"


tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"] }
utils = { path = "../utils" }
futures-util = "0.3.30"
byteorder = "1.5.0"
rustls-pemfile = "1.0.4"

