[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.9" # Must use Version 0.9
rcgen = "0.9" # Must use Version 0.9
bytes = "1.0"
rustls = "0.20" # Must use Version 0.20

tokio-macros = "2.3.0"
tokio = { version = "1.38.0", features = ["full"] }
utils = { path = "../utils" }
serde_json = "1.0.128"
byteorder = "1.5.0"
futures = "0.3"
rand = "0.9.0-alpha.2"
rustls-pemfile = "1.0.4"
regex = "1.11.1"

